Feature/bucket (#4)
* - Change TagScan entity to Tag
- Add Bucket and Record logic

* Add endpoint to list buckets with their tags
